# backend-todo-web-app

./: .env.example  .gitignore  CLAUDE.md  fix_priority_case.py  main.py  pyproject.toml  run_migration.py
migrations/: 002_add_priority_and_tags.sql
src/: config.py  main.py
src/auth/: dependencies.py  jwt_handler.py
src/crud/: tag.py  task.py
src/db/: database.py
src/exceptions/: base.py  handlers.py
src/middleware/: cors.py  error_handler.py  logging.py
src/models/: priority.py  tag.py  task.py  user.py
src/routers/: health.py  tags.py  tasks.py
src/schemas/: task.py
tests/: conftest.py
tests/integration/: test_auth_setup.py  test_tags_api.py  test_tasks_api_filter.py  test_tasks_api_priority.py  test_tasks_api_search.py  test_tasks_api_sort.py  test_tasks_api_tags.py
tests/unit/: test_tag_crud.py  test_task_crud_filter.py  test_task_crud_priority.py  test_task_crud_search.py  test_task_crud_sort.py  test_task_crud_tags.py  test_user_model.py
